project(class_objects)

set(01_dir_path ${CMAKE_CURRENT_LIST_DIR}/01_class)
set(01_src_path ${01_dir_path}/main.cpp ${01_dir_path}/structor_test.cpp)
set(03_dir_path ${CMAKE_CURRENT_LIST_DIR}/03_class_stack)
set(03_src_path ${03_dir_path}/main.cpp ${03_dir_path}/stack.cpp)
set(05_dir_path ${CMAKE_CURRENT_LIST_DIR}/05_destructor)
set(05_src_path ${05_dir_path}/main.cpp ${05_dir_path}/destruct_demo.cpp)

add_executable(01_class ${01_src_path})
add_executable(02_new_delete ${CMAKE_CURRENT_LIST_DIR}/02_new_delete/main.cpp)
add_executable(03_class_stack ${03_src_path})
add_executable(04_para_list ${CMAKE_CURRENT_LIST_DIR}/04_para_list/main.cpp)
add_executable(05_destructor ${05_src_path})
add_executable(06_copy_constructor ${CMAKE_CURRENT_LIST_DIR}/06_copy_constructor/main.cpp)
add_executable(07_this ${CMAKE_CURRENT_LIST_DIR}/07_this/main.cpp)
add_executable(08_pointer ${CMAKE_CURRENT_LIST_DIR}/08_pointer/main.cpp)
add_executable(09_override ${CMAKE_CURRENT_LIST_DIR}/09_override/main.cpp)
add_executable(10_overload ${CMAKE_CURRENT_LIST_DIR}/10_overload/main.cpp)
add_executable(11_constants ${CMAKE_CURRENT_LIST_DIR}/11_constants/main.cpp)
add_executable(12_static ${CMAKE_CURRENT_LIST_DIR}/12_static/main.cpp)
add_executable(13_friend ${CMAKE_CURRENT_LIST_DIR}/13_friend/main.cpp)
add_executable(14_inherit ${CMAKE_CURRENT_LIST_DIR}/14_inherit/main.cpp)
add_executable(15_polymorphic ${CMAKE_CURRENT_LIST_DIR}/15_polymorphic/main.cpp)